fixed spacing of some stuff

--- a/main/contact.css
+++ b/main/contact.css
@@ -30,4 +30,5 @@ section span { color: #de993e; }
 
 section img {
   width:10vh; height: 10vh;
+  margin-left: 1vw;
 }
