--- a/main/landing.css
+++ b/main/landing.css
@@ -17,7 +17,6 @@ html, body {  background-color: RGB(12,12,12) !important; }
 
 #top_content h1 {
   margin-top: -2vh !important;
-  margin-left: 33vw !important;
   position: absolute;
   height: 1em; width: max-content;
   color: white;
@@ -29,7 +28,6 @@ html, body {  background-color: RGB(12,12,12) !important; }
 
 #top_content p {
   top: 11.5vh;
-  margin-left: 37vw !important;
   font-size: 2.5vh;
   color: gray;
   animation: appear 1500ms ease 3500ms forwards;
